--- a/conclusion.tex
+++ b/conclusion.tex
@@ -21,8 +21,9 @@
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
 %  * filled the demand for some starting overview of the common structures
-%  * unification of MM and PhC concepts
-%  * attempt for clarification of these two terms
+%  * unification of MM and PhC concepts, attempt for clarification of these two terms
+%  * explained the typical "antiresonance" in effective parameters, that seems to cause confusion 
+%		(http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures
