--- a/numeric.tex
+++ b/numeric.tex
@@ -626,11 +626,13 @@ this method makes several assumptions that may not always hold. One of them is t
 \begin{figure}[ht] \centering \caption{CDH \todo{+CAPT, MOVE, and add the X-Y-Z arrows to the figure}} \includegraphics[width=12cm]{img/cdh_geometry.pdf}  \label{fg_fdtd_cdh} \end{figure} %% 
 %% Markel2013: Of course, a refractive index per se (generally, tensorial and dependent on the direction of the Bloch wave vector) can always be formally intro- duced for a Bloch wave.
 
+\add{
 \paragraph{Simulation setup}
 \paragraph{Retrieving the structure response}
 \paragraph{Identification of dispersion curves}
 \paragraph{Retrieval of effective permittivity out of dispersion curves}
 \paragraph{Comparison with the scattering-parameters method}
+}
 %\begin{figure} \caption{img/cdh\_srrwire\_structure.pdf}  \centering \includegraphics[width=8cm]{img/cdh_srrwire_structure.pdf} \end{figure} 
 %\begin{figure} \caption{img/cdh\_srrwirethick.pdf}  \centering \includegraphics[width=6cm]{img/cdh_srrwirethick.pdf} \end{figure} 
 
