--- a/theory.tex
+++ b/theory.tex
@@ -797,7 +797,7 @@ One thus only needs to prove the Bloch theorem for the time-invariant parts of t
 \begin{enumerate}
 \item{
 For $\E(\rr)$ to be a  valid solution of Maxwell equations in the periodic structure at the angular frequency $\omega$,
-it can be derived from Eq. (\ref{eq_me3}, \ref{eq_me4}, \ref{eq_epstensor} and \ref{eq_harmonic}) in straightforward manner that
+it can be derived from Eqs. (\ref{eq_me3}, \ref{eq_me4}, \ref{eq_epstensor} and \ref{eq_harmonic}) in straightforward manner that
 \begin{equation} 
 {\epsrl}^{-1}(\omega,\rr) \nabla\times \left[{\murl}^{-1 }(\omega,\rr) \nabla\times \E(\rr) \right] = \frac{\omega^2}{c^2}\E(\rr).   \label{eq_eigen_e}
 \end{equation}
